--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       display: none;
     }
   </style>
-  <script src="https://unpkg.com/html5-qrcode@2.3.10/html5-qrcode.min.js"></script>
+  <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.j"></script>
 </head>
 <body>
 
